--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -19,6 +19,9 @@
       id="confirmPassword"
       required 
     />
+    <label for="email">Email:</label>
+    <input type="text" name="email" id="email" required />
+
     <button type="submit">Sign up</button>
   </form>
 </body>
