--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   <title>Comicbook DB</title> 
 </head>
 <body>
+  <%- include('./partials/_navbar.ejs') %>
   <h1>Comicogs</h1>
   <p>A database for listing your comic books.</p>
   <a href="/auth/sign-up">Sign up</a>
