--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <%- include('./partials/_navbar.ejs') %>
   <h1>Comicogs</h1>
   <p>A database for listing your comic books.</p>
-  <a href="/auth/sign-up">Sign up</a>
-  <a href="/auth/sign-in">Sign in</a>
+ <!-- <a href="/auth/sign-up">Sign up</a>
+  <a href="/auth/sign-in">Sign in</a> -->
 </body>
 </html>
