--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,7 +6,8 @@
   <title>Your comics</title>
 </head>
 <body>
-    <%- include('./partials/_navbar.ejs') %>
+    <%- include('../partials/_navbar.ejs') %>
   <h1>Your comics</h1>
+  <a href="/users/<%=user._id%>/comics/new">Add a new comic</a>
 </body>
 </html>
