--- a/views/comics/new.ejs
+++ b/views/comics/new.ejs
@@ -7,8 +7,8 @@
   <title>Create a comic listing</title>
 </head>
 <body>
-  <h1>Create a new comick book listing</h1>
   <%- include('../partials/_navbar.ejs') %>
+  <h1>Create a new comic book listing <%= user.username %></h1>
   <form action="/users/<%= user._id %>/comics" method="POST">
     <label for="title">Title:</label>
     <input type="text" name="title" id="title">
