--- a/views/comics/show.ejs
+++ b/views/comics/show.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/styles.css"/>
   <title><%= comic.title %></title>
 </head>
 <body>
@@ -20,12 +21,11 @@
     action="/users/<%= user._id %>/comics/<%= comic._id %>/edit">
     <button type="submit">Edit this comic</button>
   </form>
-  
-  
   <form
     action="/users/<%= user._id %>/comics/<%= comic._id %>?_method=DELETE"
     method="POST">
     <button type="submit">Delete this entry</button>
   </form>
+  <a class="index" href="/users/<%= user._id %>/comics/">Back to comics index</a>
 </body>
 </html>
