--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css"/>
   <title><%= user.username %>'s comics</title>
 </head>
 <body>
@@ -16,6 +17,6 @@
       </li>
     <% }) %>
   </ul>
-  <a href="/users/<%=user._id%>/comics/new">Add a new comic</a>
+  <a class="index" href="/users/<%=user._id%>/comics/new">Add a new comic</a>
 </body>
 </html>
