--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,8 +10,9 @@ body {
 nav {
     height: 125px;
     width: 100%;
-    background-color: rgba(0, 250, 0, .2);
+    
     font-size: 25px;
+    margin-top:
 }
 
 .nav {
@@ -26,6 +27,10 @@ label {
     justify-content: center;
     font-size: 20px;
 
+}
+
+h1 {
+  margin-top: 45px;
 }
 
 li {
