--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -7,12 +7,13 @@
 </head>
 <body>
   <%- include('../partials/_navbar.ejs') %>
-  <h1>Welcome to <%= pageOwner.username %>'s collection</h1>
+  <h1><%= pageOwner.username %>'s collection</h1>
   <p>They have:</p>
   <ul>
     <% pageOwner.comicsCollection.forEach((comic)=>{ %>
-        <li><a href="/users/<%= user._id %>/comics/<%= comic._id %>">
-            <%= comic.title %> </a></li>
+        <li>
+            <%= comic.title %> Volume<%= comic.issue %>
+         </li>
     <% }) %>
   </ul>
 </body>
