--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
 <body>
   <%- include('./partials/_navbar.ejs') %>
   <h1>Comicogs</h1>
-  <p>A database for listing your comic books.</p>
+  <h2>A database for listing your comic books.</h2>
 </body>
 </html>
