--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,11 @@ label {
 
 h1 {
   margin-top: 45px;
+  font-size: 55px;
+}
+
+h2{
+  font-size: 35px;
 }
 
 li {
@@ -45,4 +50,10 @@ button {
 .index {
     font-size: 25px;
     font-family: fantasy;
+}
+
+ul{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
