--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,3 +57,10 @@ ul{
   flex-direction: column;
   align-items: center;
 }
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
