--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,7 +45,20 @@ li {
 
 button {
     margin: 15px;
+    height: 30px;
+    width: 75px;
 }
+
+button {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+  }
+  
+button:hover {
+    background-color: #555555;
+    color: white;
+  }
 
 .index {
     font-size: 25px;
